# PokerHandEvaluator

./: .gitignore  .travis.yml  CONTRIBUTING.md  Makefile  README.md
Documentation/: Algorithm.md  README.md
cpp/: .gitignore  CMakeLists.txt  CMakeLists.txt.in  Makefile  README.md
cpp/benchmark/: benchmark.cc
cpp/examples/: .gitignore  Makefile  c_example.c  cpp_example.cc  example1.c  example2.cc  omaha_example.cc
cpp/include/phevaluator/: card.h  hand.h  phevaluator.h  rank.h
cpp/src/: 7462.c  dptables.c  evaluator.cc  evaluator5.c  evaluator6.c  evaluator7.c  evaluator8.c  evaluator9.c  evaluator_omaha.c  hash.c  hash.h  hashtable.c  rank.c  tables.h
cpp/test/: evaluation.cc  evaluation_omaha.cc  five.c  five.cc  rank.cc  seven.c  seven.cc  six.c  six.cc  unit_tests.cc
cpp/test/kev/: fast_eval.c  kev_eval.c  kev_eval.h
fastevaluator/: Makefile  evaluator.h  evaluator5.c  evaluator7.c  five.c  hash.c  hash.h  seven.c  tables.h
python/: README.md  run.sh
python/phevaluator/: benchmark.py  examples.py
python/phevaluator/evaluator/: card.py  evaluator.py  evaluator5.py  evaluator6.py  evaluator7.py  evaluator8.py  evaluator9.py  hash.py  simple_evaluator.py
python/phevaluator/table_tests/: test_dptables.py  test_hashtable.py  test_hashtable5.py  test_hashtable6.py  test_hashtable7.py  test_hashtable8.py  test_hashtable9.py  utils.py
python/phevaluator/tests/: test_evaluator.py
python/src/: dptables.py  evaluator5.py  evaluator6.py  evaluator7.py  evaluator8.py  hash.py  hashtable.py  hashtable5.py  hashtable6.py  hashtable7.py  hashtable8.py
python/test/: test.py
python/test_tables/: __init__.py  test_dptables.py  test_hashtable.py  test_hashtable5.py  test_hashtable6.py  test_hashtable7.py  test_hashtable8.py  utils.py
test/: five.c  seven.c  six.c
test/kev/: arrays.h  fast_eval.c  kev_eval.c  kev_eval.h
